[tool.poetry]
name = "prompt_engineering"
version = "0.1.0"
description = "A prompt engineering system"
authors = ["Elroy Galbraith <elroy.galbraith@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
requests = "^2.31.0"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 